# research

./: .gitignore  AGENTS.md  README.md  build-github-pages.sh  render-readme-index.py  run-github-pages-hooks.sh
abc-wasm-browser/: README.md  abc-unix-wasm.diff  notes.md
absurd-in-sqlite/: README.md  _summary.md  absurd_sqlite.py  test_absurd_sqlite.py
android-mitm-e2e-debug/: DEPLOYMENT_CHECKLIST.md  EXECUTIVE_SUMMARY.txt  FINAL_SUCCESS_REPORT.md  INDEX.md  IPTABLES_SOLUTION.md  MITMPROXY_AUTH_FIX.md  README.md  SYSTEM_WIDE_SUCCESS.md  entrypoint.diff  notes.md  test_e2e.sh
android-mitm-mvp-validation/: DEBUGGING_GUIDE.md  README.md  VALIDATION_REPORT.md  _summary.md  notes.md
apptron-analysis/: README.md  _summary.md  notes.md
ascii-diagram-editor/: README.md  _summary.md  notes.md
ast-grep-import-rewriter/: README.md  _summary.md  import_rewriter.py  notes.md  sgconfig.yml  test_import_rewriter.py
bf-pointer-propagation/: README.md  bf.py.diff  notes.md
blog-header-alignment/: README.md  _summary.md
blog-tags-scikit-learn/: .gitignore  README.md  (+14 more)
camel-security/: README.md  notes.md  pyproject.toml
camel-security/camel/: __init__.py  agent.py  config.py  errors.py  interpreter.py  llm.py  policies.py  tools.py  types.py
camel-security/examples/: basic_usage.py
camel-security/tests/: __init__.py  test_interpreter.py  test_policies.py  test_types.py
datasette-pytest-fixtures/: README.md  notes.md  pyproject.toml
datasette-pytest-fixtures/datasette_pytest/: __init__.py  fixtures.py  helpers.py  plugin.py  plugin_helpers.py
datasette-pytest-fixtures/examples/: test_authentication.py  test_basic_usage.py  test_plugins.py
deno-python-library/: README.md  notes.md  pyproject.toml
deno-python-library/src/denobox/: __init__.py  async_box.py  sync_box.py  worker.js
deno-python-library/tests/: test_async_eval.py  test_async_wasm.py  test_sandbox.py  test_sync_eval.py  test_sync_wasm.py
deno-python-library/tests/fixtures/: create_wasm.py  math.wasm
epsilon-python-wrapper/: .gitignore  README.md  _summary.md  epsilon-go-mod.diff  go.mod  libepsilon.go  notes.md  pyproject.toml  setup.py
epsilon-python-wrapper/epsilon/: __init__.py  runtime.py
epsilon-python-wrapper/tests/: __init__.py  conftest.py  test_basic.py
h3o-python/: Cargo.toml  README.md  _summary.md  notes.md  pyproject.toml
h3o-python/python/h3o_python/: __init__.py
h3o-python/src/: lib.rs
h3o-python/tests/: test_bindings.py
just-bash-deno-python/: README.md  _summary.md  just_bash_server.ts  notes.md  pyproject.toml  test_advanced.ts  test_basic.ts  test_server.ts
just-bash-deno-python/just_bash_py/: __init__.py  client.py
just-bash-deno-python/tests/: test_async.py  test_sync.py
llm-rlm-plugin/llm-rlm/: README.md  llm_rlm.py  pyproject.toml
llm-rlm-plugin/llm-rlm/tests/: test_integration.py  test_llm_rlm.py
memchr-c-wrapper/: .gitignore  MANIFEST.in  README.md  _summary.md  benchmark.py  notes.md  pyproject.toml  setup.py
memchr-c-wrapper/python/pymemchr_c/: __init__.py
memchr-c-wrapper/src/: memchr.c  memchr.h  pymemchr_c_module.c
memchr-c-wrapper/tests/: __init__.py  test_pymemchr_c.py
memchr-python-wrapper/: .gitignore  Cargo.toml  README.md  _summary.md  benchmark.py  notes.md  pyproject.toml
memchr-python-wrapper/python/pymemchr/: __init__.py
memchr-python-wrapper/src/: lib.rs
memchr-python-wrapper/tests/: __init__.py  test_pymemchr.py
pagination-sql/: README.md  pyproject.toml
pagination-sql/pagination_sql/: __init__.py
pagination-sql/tests/: __init__.py  test_pagination.py
pdf-to-image-converter/pdf2img-py/: Cargo.toml  pyproject.toml
pdf-to-image-converter/pdf2img-py/python/pdf2img_py/: __init__.py
pdf-to-image-converter/pdf2img-py/src/: lib.rs
servo-crate-exploration/html5ever-wasm-demo/: Cargo.toml
servo-crate-exploration/html5ever-wasm-demo/src/: lib.rs
servo-crate-exploration/html5ever-wasm-demo/www/: html5ever_wasm_demo.d.ts  html5ever_wasm_demo.js  html5ever_wasm_demo_bg.wasm  html5ever_wasm_demo_bg.wasm.d.ts  index.html
servo-crate-exploration/servo-shot/: Cargo.toml  sample.html
servo-crate-exploration/servo-shot/src/: main.rs
sqlite-history-json/: pyproject.toml
sqlite-time-limit-extension/: README.md  _summary.md  notes.md  pyproject.toml  setup.py
sqlite-time-limit-extension/src/sqlite_time_limit/: __init__.py  time_limit.c
sqlite-time-limit-extension/tests/: test_time_limit.py
sqlite-wasm-library/sqlite3_wasm/: README.md  pyproject.toml
sqlite-wasm-library/sqlite3_wasm/src/sqlite3_wasm/: __init__.py  sqlite3.wasm
sqlite-wasm-library/sqlite3_wasm/tests/: test_sqlite3_wasm.py
syntaqlite-python-extension/: .gitignore  README.md  _summary.md  _syntaqlite.c  build_wasm.sh  notes.md  pyproject.toml  setup.py  test_syntaqlite.py
tre-python-binding/: README.md  _summary.md  benchmark.out  benchmark.py  build_libtre.sh  notes.md  pyproject.toml  test_output.txt
tre-python-binding/src/tre_py/: __init__.py  deadline.py
tre-python-binding/tests/: test_basic.py  test_redos.py
v86-python-sandbox/: README.md  notes.md  pyproject.toml  test_v86box.py
v86-python-sandbox/v86box/: __init__.py  sync_box.py  worker.js
vibium-python-client/vibium-python/: README.md  pyproject.toml
vibium-python-client/vibium-python/src/vibium_python/: __init__.py  async_bidi.py  async_browser.py  async_element.py  async_vibe.py  bidi.py  browser.py  clicker.py  element.py  vibe.py
vibium-python-client/vibium-python/tests/: conftest.py  test_async_browser.py  test_browser_launch.py  test_click.py  test_find.py  test_navigation.py  test_screenshot.py  test_type.py
vibium-python-client/vibium-python/tests/fixtures/: index.html  page2.html
wasm-port-benchmarks/rust-tokenizer/: Cargo.toml
wasm-port-benchmarks/rust-tokenizer/src/: lib.rs
wasm-sandbox-prototype/: .gitignore  Cargo.toml  README.md  notes.md  protocol.md
wasm-sandbox-prototype/guest/: Cargo.toml
wasm-sandbox-prototype/guest/src/: lib.rs
wasm-sandbox-prototype/src/: main.rs  sandbox.rs
wasm-sandbox-prototype/tests/: integration_test.sh
(+1571 files in other folders)
