[project]
name = "denobox"
version = "0.1.0"
description = "Execute JavaScript and WebAssembly in a Deno sandbox from Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "deno",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/denobox"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
