[package]
name = "h3o-python"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
authors = ["OpenAI Assistant"]
description = "Python bindings for the h3o Rust library."

[lib]
name = "h3o_python"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
h3o = { git = "https://github.com/HydroniumLabs/h3o", tag = "v0.9.3", default-features = false }

[package.metadata.maturin]
name = "h3o_python"
