[build-system]
requires = ["maturin>=1.5"]
build-backend = "maturin"

[project]
name = "h3o-python"
version = "0.1.0"
description = "Python bindings for the h3o Rust library"
authors = [{ name = "OpenAI Assistant" }]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: GIS",
]

[project.urls]
Homepage = "https://github.com/HydroniumLabs/h3o"
Repository = "https://github.com/HydroniumLabs/h3o"

[tool.maturin]
features = []
module-name = "h3o_python._core"
python-source = "python"
