[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymemchr-c"
version = "0.1.0"
description = "Python bindings for optimized byte and substring search functions in C"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["memchr", "search", "substring", "performance", "simd", "c"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "matplotlib>=3.0", "numpy>=1.20"]

[tool.setuptools]
packages = ["pymemchr_c"]
package-dir = {"" = "python"}

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
    "pytest>=8.3.5",
]
