[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pymemchr"
version = "0.1.0"
description = "Python bindings for the memchr Rust library - high-performance byte and substring search"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["memchr", "search", "substring", "performance", "simd"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "matplotlib>=3.0", "numpy>=1.20"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "pymemchr._pymemchr"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
    "pytest>=8.3.5",
]
