[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlite-time-limit"
version = "0.1.0"
description = "SQLite C extension with query time limits"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
