[package]
name = "wasm-sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
wasmtime = "27.0"
wasmtime-wasi = "27.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
tokio = { version = "1.41", features = ["full"] }
