[project]
name = "llm-rlm"
version = "0.1"
description = "Recursive Language Model tools for processing unbounded context through a sandboxed Python REPL"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = "Apache-2.0"
classifiers = []
requires-python = ">=3.12"
dependencies = [
    "llm>=0.26",
    "pyeryx",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/simonw/llm-rlm"
Changelog = "https://github.com/simonw/llm-rlm/releases"
Issues = "https://github.com/simonw/llm-rlm/issues"
CI = "https://github.com/simonw/llm-rlm/actions"

[project.entry-points.llm]
llm_rlm = "llm_rlm"

[dependency-groups]
dev = ["pytest", "llm-echo>=0.3a1"]
