[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pdf2img-py"
version = "0.1.0"
description = "Python bindings for pdfium-render - convert PDF pages to images"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "pdf2img_py._native"
include = [
    { path = "bundled_libs/*", format = "wheel" },
]
