[package]
name = "html5ever-wasm-demo"
version = "0.1.0"
edition = "2021"
description = "Tiny SPA demo: run Servo's html5ever HTML parser in the browser via WebAssembly."
license = "MPL-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# From Servo. These are the same crates the 0.1.0 `servo` crate
# depends on transitively for HTML parsing, and they already build
# cleanly on wasm32-unknown-unknown.
html5ever = "0.35"
# The rcdom helper is published under an "unofficial" suffix because
# it's not part of the main html5ever release channel. Versions line
# up roughly 1:1 with the html5ever major.
markup5ever_rcdom = "0.35.0-unofficial"

# JS interop.
wasm-bindgen = "0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
