[project]
name = "sqlite3-wasm"
version = "0.1.0"
description = "SQLite module using WebAssembly via wasmtime - a drop-in replacement for the sqlite3 module"
readme = "README.md"
authors = [
    { name = "Claude", email = "noreply@anthropic.com" }
]
requires-python = ">=3.11"
dependencies = [
    "wasmtime>=40.0.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sqlite3_wasm"]

[tool.hatch.build.targets.wheel.force-include]
"src/sqlite3_wasm/sqlite3.wasm" = "sqlite3_wasm/sqlite3.wasm"

[tool.hatch.build.targets.sdist]
include = [
    "src/sqlite3_wasm/**/*.py",
    "src/sqlite3_wasm/**/*.wasm",
    "tests/**/*.py",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
