[project]
name = "vibium-python"
version = "0.1.0"
description = "Python client for Vibium browser automation"
readme = "README.md"
authors = [
    { name = "Claude", email = "noreply@anthropic.com" }
]
requires-python = ">=3.11"
dependencies = [
    "websockets>=15.0.1",
]

[project.urls]
Homepage = "https://vibium.com"
Repository = "https://github.com/VibiumDev/vibium"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
